feat: add Docker support and refine security access control